--- a/requirements.txt
+++ b/requirements.txt
@@ -52,14 +52,14 @@ pykeccak==0.2.1
 pylint==2.2.2
 pysha3==1.0.2
 pytest==4.0.1
-python-bitcoinrpc==0.1
+# python-bitcoinrpc==0.1
 python-dotenv==0.10.0
 pytz==2018.7
-qrcode==6.1
+# qrcode==6.1
 readme-renderer==24.0
 requests==2.21.0
 requests-toolbelt==0.9.1
-secp256k1==0.13.2
+# secp256k1==0.13.2
 sha3==0.2.1
 simplejson==3.16.0
 six==1.12.0
